[package]
name = "blessingrs"
version = "0.1.0"
edition = "2024"
authors = ["aerialasf <GitHub>"]
description = "A Rusty, blessings-insipired TUI library."
license = "MIT"
repository = "https://github.com/scriptrblxs/blessingrs"
readme = "README.md"
keywords = ["terminal","ansi","blessings","ncurses","tui"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.29.0"
